--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
     <title>Diseñador Freelancer</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
+    <!--Preloado ayuda a que los estilos carguen de manera mas rapida-->
+    <link rel="preload" href="css/styles.css" as="style">
+
+    <!--linkear codigo HTML a CSS-->
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
+
     <!--Por lo general si la primera estructura es un header , por lo general la seccion siguiente
     es un section y no un main , pero depende del proyecto-->
 <body>
 
     <!--titulo en el header-->
     <header>
-        <h1>Diego Iturra Freelancer</h1>
+        <h1 class="titulo">Diego Iturra <span>Freelancer</span></h1>
     </header>
 
     <nav>
@@ -45,6 +51,7 @@
         <section>
             <h3>Diseño Web</h3>
 
+            <!--icono paleta de colores-->
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <path d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
@@ -59,6 +66,7 @@
         <section>
             <h3>Aplicaciones Móviles</h3>
             
+            <!--icono de android y apple-->
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-apple" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <path d="M9 7c-3 0 -4 3 -4 5.5c0 3 2 7.5 4 7.5c1.088 -.046 1.679 -.5 3 -.5c1.312 0 1.5 .5 3 .5s4 -3 4 -5c-.028 -.01 -2.472 -.403 -2.5 -3c-.019 -2.17 2.416 -2.954 2.5 -3c-1.023 -1.492 -2.951 -1.963 -3.5 -2c-1.433 -.111 -2.83 1 -3.5 1c-.68 0 -1.9 -1 -3 -1z" />
@@ -82,6 +90,7 @@
         <section>
             <h3>E-Commerce</h3>
 
+            <!--icono de tarjeta de credito-->
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-credit-card" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <rect x="3" y="5" width="18" height="14" rx="3" />
