cambio en footer

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </main>
     
     <footer class="footer">
-        <p>Todos los derechos reservados</p>
+        <p>Todos los derechos reservados <span>2021</span></p>
     </footer>
 
 </body>
